force-app/main/default/objects/Documento__c/Documento__c.object-meta.xml
<CustomObject>
    <label>Documento</label>
    <nameField>
        <label>Nome do Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>