force-app/main/default/objects/Documento__c/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <label>Comprador</label>
    <referenceTo>Comprador__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>