force-app/main/default/objects/Documento__c/fields/Entregue__c.field-meta.xml
<CustomField>
    <fullName>Entregue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entregue?</label>
    <type>Checkbox</type>
</CustomField>