force-app/main/default/objects/Documento__c/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Entregue</fullName>
            </value>
            <value>
                <fullName>Pendente de Análise</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
                <label>Expirada</label>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>