force-app/main/default/objects/Documento__c/fields/StatusIcone__c.field-meta.xml
<CustomField>
    <fullName>StatusIcone__c</fullName>
    <label>Ícone de status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>