force-app/main/default/objects/Documento__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <label>Tipo do documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identificação</fullName>
            </value>
            <value>
                <fullName>Estado Civil</fullName>
            </value>
            <value>
                <fullName>Residência</fullName>
            </value>
            <value>
                <fullName>Renda</fullName>
            </value>
            <value>
                <fullName>Ficha de Cadastro</fullName>
            </value>
            <value>
                <fullName>Imposto de Renda</fullName>
            </value>
            <value>
                <fullName>CTPS e FGTS</fullName>
            </value>
            <value>
                <fullName>Dependentes</fullName>
            </value>
            <value>
                <fullName>Aplicações Financeiras</fullName>
            </value>
            <value>
                <fullName>Carta de Crédito</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Veículo</fullName>
            </value>
            <value>
                <fullName>Imóvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>