force-app/main/default/objects/Documento__c/recordTypes/Identificacao.recordType-meta.xml
<RecordType>
    <fullName>Identificacao</fullName>
    <active>true</active>
    <label>Identificação</label>
</RecordType>